# hack-the-system

./: README.MD  pyproject.toml
src/hack_the_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/hacks/: __init__.py  __main__.py
src/hacks/routers/: files.py
